--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,19 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content></ion-content>
+    <ion-toolbar>
+      <ion-title>
+        Saved
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <h2>Saved</h2>
+    <br>
+    <p> Not every day is filled with adventure, but you can start 
+      planning for the next one. Tap the heart on any home to start
+    saving your favorites here. </p>
+  </ion-content>
+  <ion-footer>
+    <ion-button expand="block"> Find homes </ion-button>
+  </ion-footer>
+  
