--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -2,6 +2,10 @@
     font-weight: bold;
 }
 
-h1, p, ion-button {
+h2, p {
     padding-left: 10px;
+}
+
+.centerAlign {
+    text-align: center;
 }
