--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,32 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="search"></ion-icon>
+      <ion-label>Explore</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="heart-empty"></ion-icon>
+      <ion-label>Saved</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="airplane"></ion-icon>
+      <ion-label>Trips</ion-label>
     </ion-tab-button>
+
+    <!-- Just added this -->
+    <ion-tab-button tab="tab4">
+      <ion-icon name="mail"></ion-icon>
+      <ion-label>Inbox</ion-label>
+    </ion-tab-button>
+
+    <!-- Just added this -->
+    <ion-tab-button tab="tab5">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
