may 29 first commit

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,10 +9,19 @@
   <ion-content>
     <h2>Saved</h2>
     <br>
-    <p> Not every day is filled with adventure, but you can start 
-      planning for the next one. Tap the heart on any home to start
-    saving your favorites here. </p>
+    <ion-list>
+
+      <ion-item *ngFor="let listing of savedListings">
+        <figure>
+          <img src={{listing.getImageLink()}} width="200px"/>
+          <figcaption class="listingName"> {{listing.getListingName()}} </figcaption>
+          <figcaption class="location"> {{listing.getLocation()}} </figcaption>
+        </figure>
+      </ion-item>
+      
+    </ion-list>
   </ion-content>
+  
   <ion-footer>
     <ion-button expand="block"> Find homes </ion-button>
   </ion-footer>
