--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,8 +20,12 @@
         </div>
   
         <div padding>
-          <!-- <ion-button size="large" href="/touchid" expand="block">Login</ion-button> -->
           <ion-button expand="full" (click)="navToTabs()"> Login </ion-button>
+        </div>
+
+        <div padding>
+          <h4 text-center> New User? </h4>
+          <ion-button expand="full" (click)="navToRegistration()"> Register </ion-button>
         </div>
 
       </ion-col>
