--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -1,3 +1,16 @@
+
+.review-label {
+    padding-left: 15px;
+}
+
+.review-text {
+    padding-left: 10px;
+}
+
+.review-name {
+    padding-left: 10px;
+}
+
 .icon{
     display: inline-block;
     vertical-align: middle;
@@ -11,19 +24,3 @@
     padding-left: 5px;
     padding-right: 10px;
   }
-
-  .reviewHeader {
-      color: #1d843d;
-      text-decoration: underline;
-      font-weight: bold;
-  }
-
-  .reviewDate {
-      text-transform: uppercase;
-      font-weight: bold;
-      font-size: 12px;
-  }
-
-  .reviewText {
-    font-size: 12px;
-}
