--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,16 +11,16 @@
 
         <div padding>
           <ion-item>
-            <ion-input type="text" placeholder="Username"></ion-input>
+            <ion-input type="text" placeholder="Email Address" (ngModel)]="user.email"></ion-input>
           </ion-item>
   
           <ion-item>
-            <ion-input type="password" placeholder="Password"></ion-input>
+            <ion-input type="password" placeholder="Password" (ngModel)]="user.password"></ion-input>
           </ion-item>
         </div>
   
         <div padding>
-          <ion-button expand="full" (click)="navToTabs()"> Login </ion-button>
+          <ion-button expand="full" (click)="login()"> Login </ion-button>
         </div>
 
         <div padding>
