--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,11 +11,11 @@
 
         <div padding>
           <ion-item>
-            <ion-input type="text" placeholder="Email Address" [(ngModel)]="user.email"></ion-input>
+            <ion-input type="text" placeholder="Email Address" [(ngModel)]="email"></ion-input>
           </ion-item>
   
           <ion-item>
-            <ion-input type="password" placeholder="Password" [(ngModel)]="user.password"></ion-input>
+            <ion-input type="password" placeholder="Password" [(ngModel)]="password"></ion-input>
           </ion-item>
         </div>
   
