--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -10,12 +10,12 @@
   <div class="ion-padding">
     <ion-item>
       <ion-label> First Name </ion-label>
-      <ion-input [(ngModel)]="user.firstname"> </ion-input>
+      <ion-input [(ngModel)]="user.firstName"> </ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label> Last Name </ion-label>
-      <ion-input [(ngModel)]="user.lastname"> </ion-input>
+      <ion-input [(ngModel)]="user.lastName"> </ion-input>
     </ion-item>
 
     <ion-item>
