up to date with provider app now

--- a/src/app/listing-details/listing-details.page.html
+++ b/src/app/listing-details/listing-details.page.html
@@ -7,10 +7,10 @@
 
 <ion-content>
     <ion-card>
-      <img src={{currentListing.getImageLink()}} width="100px"/>
-      <h3 class="pad-left"> {{currentListing.getListingName()}} </h3>
-      <p class="pad-left"> {{currentListing.getLocation()}} </p>
-      <p class="pad-left"> ${{currentListing.getPrice()}} per night</p>
+      <img src={{currentListing.imageLink}} width="100px"/>
+      <h3 class="pad-left"> {{currentListing.name}} </h3>
+      <p class="pad-left"> {{currentListing.location}} </p>
+      <p class="pad-left"> ${{currentListing.price}} per night</p>
 
     </ion-card>
  
