--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -11,7 +11,7 @@
         <img src="https://i.boring.host/1654O2Dy.jpg">
       </ion-avatar>
       <ion-label *ngIf="user">
-          <h2>Hi, I'm {{user.getFirstName()}}</h2>
+          <h2>Hi, I'm {{user.firstName}}</h2>
           <ion-note>Joined in 2019</ion-note>
           <br>
           <ion-icon name="paw" class="icon"></ion-icon>
@@ -32,7 +32,7 @@
 
     <ion-item>
         <ion-label>
-        <h2> Yuki provided </h2>
+        <h2> {{user.firstName}} provided </h2>
         <ion-icon name="checkmark-circle" class="icon"></ion-icon>
         <span class="text"> Email address </span>
         <ion-icon name="checkmark-circle" class="icon"></ion-icon>
@@ -41,13 +41,13 @@
     </ion-item>
     
     
-    <ion-card *ngFor="let review of reviews">
+    <!-- <ion-card *ngFor="let review of reviews">
       <img src={{review.getListing().getImageLink()}} width="100px"/>
       <h3 class="review-name"> {{review.getListing().getListingName()}} </h3>
       <p class="review-text"> {{review.getDate()}} </p>
       <p class="review-text"> Rating: {{review.getNumOfStars()}}/5 </p>
       <p text-wrap class="review-text"> Review: {{review.getReviewText()}} </p>
-    </ion-card>
+    </ion-card> -->
     
     <!-- <ion-item *ngFor="let review of reviews">
         {{review.getDate()}}
