--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -8,7 +8,7 @@
   <ion-list>
     <ion-item>
       <ion-avatar slot="end">
-        <img src="https://i.boring.host/1654O2Dy.jpg">
+        <img src="https://i.stack.imgur.com/34AD2.jpg">
       </ion-avatar>
       <ion-label *ngIf="user">
           <h2>Hi, I'm {{user.firstName}}</h2>
